--- a/templates/index.html
+++ b/templates/index.html
@@ -22,13 +22,13 @@
             </div>
 
             <div class="card-body mt-4">
-              <h5 class="text-success"><i class="fas fa-toolbox"></i>     Back End Developer</h5><br>
+              <h5 class="text-success"><i class="fas fa-toolbox"></i> Stack: Back End Developer</h5><br>
               
-              <h5 class="text-success"><i class="fas fa-home"></i>     Nigeria, Lagos</h5><br>
+              <h5 class="text-success"><i class="fas fa-home"></i> Address: No 8,Redeem truth street,Sawmill, Ibereko, Badagry, Lagos-state</h5><br>
               
-              <h5 class="text-success"><i class="far fa-envelope"></i>  bdave3674@gmail.com</h5><br>
+              <h5 class="text-success"><i class="far fa-envelope"></i> Email: bdave3674@gmail.com</h5><br>
 
-              <h5 class="text-success"><i class="fas fa-phone"></i>  +2347069185764</h5><br>
+              <h5 class="text-success"><i class="fas fa-phone"></i> Phone No: +2347069185764</h5><br>
               
               <h5 class="text-success mt-5"><i class="fas fa-star"></i>  Skills</h5><br>
               
